# arbitage

./: .gitignore  create_arbitrage.js  hardhat.config.js  package-lock.json  package.json  test-addresses.json
contracts/: ArbitrageExecutor.sol
contracts/interfaces/: ICurveRouter.sol  IERC20.sol  IFlashLoanReceiver.sol  ILendingPool.sol  IUniswapV2Router.sol
contracts/libraries/: Ownable.sol  (+3 more)
mev_arbitrage_bot/: .env.example  .env.fixed  .env.fixed2  .gitignore  Cargo.toml  LICENSE  README.md  config.fixed.toml  config.no_websocket.json  config.sample.toml  config.simple.json  config.test.json  config.test.toml  config.test_contracts.json  config.test_mode.json  config.updated.json  test_connection.js
mev_arbitrage_bot/src/: config.rs  main.rs
mev_arbitrage_bot/src/blockchain/: listener.rs  mod.rs
mev_arbitrage_bot/src/contract/: mod.rs
mev_arbitrage_bot/src/contract/abi/: ArbitrageExecutor.json
mev_arbitrage_bot/src/dex/: curve.rs  mod.rs  sushiswap.rs  uniswap.rs
mev_arbitrage_bot/src/dex/abi/: curve_factory.json  curve_router.json  mod.rs  uniswap_v2_factory.json  uniswap_v2_router.json
mev_arbitrage_bot/src/flash_loan/: mod.rs
mev_arbitrage_bot/src/flash_loan/abi/: aave_lending_pool.json  mod.rs
mev_arbitrage_bot/src/gas/: mod.rs
mev_arbitrage_bot/src/mev_share/: mod.rs
mev_arbitrage_bot/src/price/: mod.rs
mev_arbitrage_bot/src/scanner/: mod.rs
mev_arbitrage_bot/src/strategy/: mod.rs
mev_arbitrage_bot/src/transaction/: builder.rs  executor.rs  mod.rs
mev_arbitrage_bot/src/utils/: mod.rs
scripts/: update_env.js  update_env_mock.js
(+19 files in other folders)
